--- a/Tutorials/02_Drummin/package.json
+++ b/Tutorials/02_Drummin/package.json
@@ -15,6 +15,7 @@
     "ansi-styles": "^4.3.0",
     "async": "^2.6.4",
     "basic-auth": "^2.0.1",
+    "body-parser": "^1.20.3",
     "call-bind": "^1.0.7",
     "chalk": "^4.1.2",
     "color-convert": "^2.0.1",
@@ -25,6 +26,7 @@
     "es-define-property": "^1.0.0",
     "es-errors": "^1.3.0",
     "eventemitter3": "^4.0.7",
+    "express": "^4.21.1",
     "follow-redirects": "^1.15.9",
     "function-bind": "^1.1.2",
     "get-intrinsic": "^1.2.4",
