--- a/Tutorials/06_Mailchimp/package.json
+++ b/Tutorials/06_Mailchimp/package.json
@@ -1,7 +1,6 @@
 {
   "name": "signup-news",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,6 +8,10 @@
   "author": "G. Castillo",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
-  }
+    "body-parser": "^1.20.3",
+    "express": "^4.21.1",
+    "https": "^1.0.0"
+  },
+  "keywords": [],
+  "description": ""
 }
